Monthly Update March 2025

--- a/api/.env
+++ b/api/.env
@@ -2,9 +2,9 @@ PORT=864
 HOST=localhost
 
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5433
 DB_USER=postgres
-DB_PASSWORD=M(74P0$Tgr3$
-DB_NAME=mainstream_db
+DB_PASSWORD=P0$Tgr3$2025
+DB_NAME=mainstream
 
 JWT_SECRET=NewEra
