--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "finalProject",
-  "version": "1.0.0",
+  "name": "mainstream",
+  "version": "6.0.0",
   "description": "",
   "main": "server.js",
   "dependencies": {
