--- a/ui/package.json
+++ b/ui/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "finalProject",
+  "name": "mainstream",
   "private": true,
-  "version": "0.0.0",
+  "version": "6.0.0",
   "type": "module",
   "scripts": {
     "start": "vite",
