--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"npm run seed\" \"npm run client\" \"npm run server\"",
     "dev": "vite",
     "build": "vite build ui",
     "preview": "vite preview",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "cd api && dotenv -e ../.env -- nodemon ./src/server.js",
-    "client": "cd ui && vite",
-    "seed": "dotenv -e .env -- cmd /C \"set PATH=%CD%\\sql_binaries\\bin;%PATH% && set PGPASSWORD=%DB_PASSWORD% && dropdb -h 127.0.0.1 -U %DB_USER% --if-exists %DB_NAME% && createdb -h 127.0.0.1 -U %DB_USER% %DB_NAME% && psql -h 127.0.0.1 -U %DB_USER% -d %DB_NAME% -f database.sql\""
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
